crates/ruff_linter/src/rules/flake8_tidy_imports/snapshots/ruff_linter__rules__flake8_tidy_imports__tests__banned_api.snap
---
source: crates/ruff_linter/src/rules/flake8_tidy_imports/mod.rs
---
TID251 `cgi` is banned: The cgi module is deprecated.
 --> TID251.py:2:8
  |
2 | import cgi
  |        ^^^
  |

TID251 `cgi` is banned: The cgi module is deprecated.
 --> TID251.py:4:1
  |
4 | from cgi import *
  | ^^^^^^^^^^^^^^^^^
  |

TID251 `cgi` is banned: The cgi module is deprecated.
 --> TID251.py:6:1
  |
6 | from cgi import a, b, c
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |

TID251 `cgi` is banned: The cgi module is deprecated.
 --> TID251.py:9:8
  |
9 | import cgi.foo.bar
  |        ^^^^^^^^^^^
  |

TID251 `cgi` is banned: The cgi module is deprecated.
  --> TID251.py:11:1
   |
11 | from cgi.foo import bar
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |

TID251 `cgi` is banned: The cgi module is deprecated.
  --> TID251.py:13:1
   |
13 | from cgi.foo.bar import *
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |

TID251 `typing.TypedDict` is banned: Use typing_extensions.TypedDict instead.
  --> TID251.py:17:20
   |
17 | from typing import TypedDict
   |                    ^^^^^^^^^
   |

TID251 `typing.TypedDict` is banned: Use typing_extensions.TypedDict instead.
  --> TID251.py:22:1
   |
22 | typing.TypedDict
   | ^^^^^^^^^^^^^^^^
   |

TID251 `typing.TypedDict` is banned: Use typing_extensions.TypedDict instead.
  --> TID251.py:24:1
   |
24 | typing.TypedDict.anything
   | ^^^^^^^^^^^^^^^^
   |

TID251 `typing.TypedDict` is banned: Use typing_extensions.TypedDict instead.
  --> TID251.py:27:1
   |
27 | typing.TypedDict()
   | ^^^^^^^^^^^^^^^^
   |

TID251 `typing.TypedDict` is banned: Use typing_extensions.TypedDict instead.
  --> TID251.py:29:1
   |
29 | typing.TypedDict.anything()
   | ^^^^^^^^^^^^^^^^
   |

TID251 `typing.TypedDict` is banned: Use typing_extensions.TypedDict instead.
  --> TID251.py:33:1
   |
33 | totally_not_typing.TypedDict
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
