crates/ruff_linter/src/rules/flake8_tidy_imports/snapshots/ruff_linter__rules__flake8_tidy_imports__tests__banned_module_level_imports.snap
---
source: crates/ruff_linter/src/rules/flake8_tidy_imports/mod.rs
---
TID253 `torch` is banned at the module level
 --> TID253.py:2:8
  |
2 | import torch
  |        ^^^^^
  |

TID253 `torch` is banned at the module level
 --> TID253.py:4:1
  |
4 | from torch import *
  | ^^^^^^^^^^^^^^^^^^^
  |

TID253 `tensorflow` is banned at the module level
 --> TID253.py:6:1
  |
6 | from tensorflow import a, b, c
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

TID253 `torch` is banned at the module level
 --> TID253.py:8:8
  |
8 | import torch as torch_wearing_a_trenchcoat
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

TID253 `tensorflow` is banned at the module level
  --> TID253.py:11:15
   |
11 | x = 1; import tensorflow
   |               ^^^^^^^^^^
   |

TID253 `torch` is banned at the module level
  --> TID253.py:14:8
   |
14 | import torch.foo.bar
   |        ^^^^^^^^^^^^^
   |

TID253 `tensorflow` is banned at the module level
  --> TID253.py:16:1
   |
16 | from tensorflow.foo import bar
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

TID253 `torch` is banned at the module level
  --> TID253.py:18:1
   |
18 | from torch.foo.bar import *
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
