crates/ruff_linter/src/rules/flake8_tidy_imports/snapshots/ruff_linter__rules__flake8_tidy_imports__tests__declared_lazy_relative_imports_mymodule.py.snap
---
source: crates/ruff_linter/src/rules/flake8_tidy_imports/mod.rs
---
TID255 Lazy import `helper` is resolved immediately
 --> mymodule.py:7:1
  |
5 | from .sub import eager
6 |
7 | helper()
  | ^^^^^^
8 | func()
9 | eager()
  |

TID255 Lazy import `func` is resolved immediately
 --> mymodule.py:8:1
  |
7 | helper()
8 | func()
  | ^^^^
9 | eager()
  |
